--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -8,7 +8,7 @@
     content="A project for Udacity Front End Web Developer nanodegree, asynchronous web app that uses Web API and user data to dynamically update the UI." />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Oswald:400,600,700|Ranga:400,700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./style.css">
+  <!-- <link rel="stylesheet" href="./style.css"> -->
 </head>
 
 <body>
