--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -1,53 +1,77 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
 
 <head>
-  <meta charset="UTF-8">
-  <title>Travel App</title>
-  <meta name="description"
-    content="A project for Udacity Front End Web Developer nanodegree, asynchronous web app that uses Web API and user data to dynamically update the UI." />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css?family=Oswald:400,600,700|Ranga:400,700&display=swap" rel="stylesheet">
-  <!-- <link rel="stylesheet" href="./style.css"> -->
+    <meta charset="utf-8">
+    <title>Evaluate News with NLP</title>
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@irinakramer" />
+    <meta name="twitter:title" content="Evaluate News with NLP" />
+    <meta name="twitter:description"
+        content="Check an article for sentiment such as positivity, subjectivity and irony. Powered by MeaningCloud API." />
+    <meta name="twitter:image" content="https://evaluate-news-nlp-17.netlify.app/evaluate-news-screenshot.png" />
+    <meta property="og:title" content="Evaluate News with NLP" />
+    <meta property="og:description"
+        content="Check an article for sentiment such as positivity, subjectivity and irony. Powered by MeaningCloud API." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://evaluate-news-nlp-17.netlify.app/" />
+    <meta property="og:image" content="https://evaluate-news-nlp-17.netlify.app/evaluate-news-screenshot.png" />
 </head>
 
 <body>
-  <div id="app">
-    <header>
-      <div class="holder headline">
-        <h1>Travel App</h1>
-      </div>
-    </header>
-    <main>
-      <div class="holder zip">
-        <label for="zip">Enter Zipcode</label>
-        <input type="text" id="zip" placeholder="enter zip code here">
-      </div>
-      <div class="holder feel">
-        <label for="feelings">How are you feeling today?</label>
-        <textarea class="myInput" id="feelings" placeholder="enter your feelings here"></textarea>
-        <button id="generate" type="submit"> Generate </button>
-      </div>
-      <div class="holder entry">
-        <label for="entryHolder">Most Recent Entry:</label>
-        <div id="entryHolder">
-          <div id="icon"></div>
-          <div id="date"></div>
-          <div id="name"></div>
-          <div id="temp"></div>
-          <div id="description"></div>
-          <div id="content"></div>
-        </div>
-      </div>
-    </main>
-    <footer>
-      <p>Udacity
-        Front End Web
-        Developer nanodegree<br>
-        <a href="http://www.irinakramer.com" target="_blank">Irina Kramer</a></p>
-    </footer>
-  </div>
 
+    <header>
+        <div class="logo">
+            <img src="../images/logo.png" alt="Evaluate News">
+        </div>
+        <div class="">
+            <ul class="menu">
+                <li><a href="http://www.irinakramer.com"><i class="fas fa-home"></i></a></li>
+                <li><a href="https://github.com/irinakramer"><i class="fab fa-github"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/irinakramer/"><i class="fab fa-linkedin-in"></i></a></li>
+            </ul>
+        </div>
+    </header>
+
+    <main>
+        <section class="input">
+            <h1>Evaluate News with NLP</h1>
+            <form class="" onsubmit="return Client.handleSubmit(event)">
+                <input id="name" type="text" name="input" value="" placeholder="Enter URL">
+                <input type="submit" name="" value="Submit" onclick="return Client.handleSubmit(event)"
+                    onsubmit="return Client.handleSubmit(event)">
+            </form>
+        </section>
+
+        <section class="output">
+            <div class="results">
+                <h2>Evaluation Results:</h2>
+                <p id="error"></p>
+                <p id="score"></p>
+                <p id="subjectivity"></p>
+                <p id="irony"></p>
+                <p id="text"></p>
+            </div>
+
+        </section>
+    </main>
+
+    <footer>
+
+        <p>Project by <a href="http://www.irinakramer.com" target="_blank">Irina Kramer</a></p>
+        <p>Udacity Front End Web Developer nanodegree</p>
+        <p>Powered by <a href="https://www.meaningcloud.com/developer/sentiment-analysis/doc">Meaning Cloud Sentiment
+                Analysis API</a></p>
+    </footer>
+    <script>
+        // Check that service workers are supported
+        if ('serviceWorker' in navigator) {
+            // Use the window load event to keep the page load performant
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('/service-worker.js');
+            });
+        }
+    </script>
 </body>
 
 </html>
