refactor: all APIs working

--- a/src/client/styles/base.scss
+++ b/src/client/styles/base.scss
@@ -5,7 +5,7 @@ body {
     flex-direction: column;
     min-height: 100vh;
     min-width: 320px;
-    background-color: #03588C;
+    background-color: lightblue;
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
     color: #ffffff;
@@ -49,7 +49,7 @@ h2 {
 .results {
     width: 100%;
     max-width: 800px;
-    background-color: #0378A6;
+    background-color: darkslategrey;
     min-height: 200px;
     padding: 1.5rem;
 }
