--- a/src/client/styles/form.scss
+++ b/src/client/styles/form.scss
@@ -1,31 +1,113 @@
-form {
-    border: none;
-    padding: 40px;
-    background-color: #0378A6;
+// form {
+//     border: none;
+//     padding: 40px;
+//     background-color: darkgray;
+//     display: flex;
+// }
+
+.container {
+    align-items: center;
+    border-radius: 2rem;
+    box-shadow: 1rem 1rem 2rem rgba(0,0,0,.1);
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 80vh;
+    margin: 0 auto;
+    position: relative;
+    transform: translateY(15%);
+    width: 80vw;
 }
 
-input {
-    flex: 1;
-    padding: 10px 20px;
-    line-height: 16px;
-    margin: 10px 0;
-    border: 1px solid #30DFF2;
-    border-radius: 3px;
-    outline: none;
-    &[type=submit] {
-        max-width: 100px;
-        margin-left: 3px;
-        background-color: #fff;
-        &:hover {
-            background-color: #30DFF2;
-            cursor: pointer;
-        }
-    }
-}
+.form__content {
+    align-content: center;
+    display: grid;
+    grid-template-columns: repeat(2, minmax(2rem, 1fr));
+    grid-template-rows: 1fr 1fr 1fr min-content 1fr 1fr;
+    grid-gap: 0.5rem;
+    justify-content: center;
+    padding: 0 1rem;
+    height: 100%;
+    width: 100%;
 
-@media only screen and (max-width: 600px) {
-    form {
-        padding: 20px;
+
+    .form__heading {
+      font-size: 10vw;
+      grid-column: 1/3;
+      grid-row: 1/2;
+      padding-top: 2rem;
+      text-align: center;
+      text-transform: uppercase;
+    }  
+
+    .form__input {
+      border: 0.1rem solid rgba(0,0,0,.1);
+      border-radius: 0.4rem;
+      font-size: 0.8rem;
+      line-height: 1.5;
+      margin: 0.1rem 0;
+      outline: none;
+      padding: 0.5rem 0.3rem;
+      text-transform: capitalize;
+
     }
-}
+
+    .input__from {
+      grid-column: 1/3;
+      grid-row: 2/3;
+    }
+
+    .input__to {
+      grid-column: 1/3;
+      grid-row: 3/4;
+    }
+
+    .date__label {
+      font-size: 1rem;
+      height: 100%;
+      grid-column: 1/3;
+      grid-row: 4/5;
+      opacity: 0.8;
+      padding: 0.3rem;
+      padding-top: 1rem;
+      text-align: left;
+
+    }
+
+    .input__date {
+      background: rgba(0,0,0,.1);
+      border: 0.1rem solid rgba(0,0,0,.1);
+      grid-column: 1/3;
+      grid-row: 5/6;
+      height: 100%;
+      font-size: 1rem;
+      outline: none;
+      padding: 0.3rem;
+      text-align: left;
+      width: 100%;
+      .input__date:focus {
+        box-shadow: none;
+      }
+    }
+
+    .input__submit {
+      border-radius: 3rem;
+      font-size: 0.9rem;
+      grid-column: 1/3;
+      grid-row: 6/7;
+      margin: 0.5rem 0 1.5rem 0;
+      opacity: 0.8;
+      padding: 0.5rem;
+      width: 100%;
+      
+      &:hover {
+        opacity: 1; 
+        cursor: pointer;
+        transition: all 0.3s ease;
+      }
+       
+      &:focus {
+         outline: none;
+      }
+    }
+  }
