--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Evaluate News with NLP</title>
+    <title>Travel App</title>
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@irinakramer" />
-    <meta name="twitter:title" content="Evaluate News with NLP" />
+    <meta name="twitter:title" content="Travel App" />
     <meta name="twitter:description"
         content="Check an article for sentiment such as positivity, subjectivity and irony. Powered by MeaningCloud API." />
     <meta name="twitter:image" content="https://evaluate-news-nlp-17.netlify.app/evaluate-news-screenshot.png" />
@@ -33,26 +33,72 @@
         </div>
     </header>
 
-    <main>
-        <section class="input">
-            <h1>Evaluate News with NLP</h1>
-            <form class="" onsubmit="return Client.handleSubmit(event)">
-                <input id="name" type="text" name="input" value="" placeholder="Enter URL">
-                <input type="submit" name="" value="Submit" onclick="return Client.handleSubmit(event)"
-                    onsubmit="return Client.handleSubmit(event)">
-            </form>
+    <main class="main">
+
+        <!-- Section About -->
+
+        <section id="about" class="section section__about">
+            <div class="map__wrapper">
+                <div class="about__map">
+                    <h1 class="map__heading">Travel App</h1>
+                    <h3 class="map__title">Your ultimate travel planner</h3>
+                    <p class="map__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora ad quod
+                        consequatur
+                        dignissimos quisquam, in doloribus accusantium reiciendis voluptatum alias rem incidunt! Porro
+                        ad aperiam,
+                        iste distinctio repellat debitis alias.</p>
+                    <a href="#" class="map__link">+ add your trip</a>
+                </div>
+            </div>
         </section>
 
-        <section class="output">
-            <div class="results">
-                <h2>Evaluation Results:</h2>
-                <p id="error"></p>
-                <p id="score"></p>
-                <p id="subjectivity"></p>
-                <p id="irony"></p>
-                <p id="text"></p>
-            </div>
+        <!-- Section Planner -->
 
+        <section id="planner" class="section section__planner">
+            <div class="container planner__form">
+                <div class="form__image section__image">
+                    <!-- <img src="" alt="planet Earth icon"> -->
+                </div>
+                <form class="form__content" id="form">
+                    <h2 class="form__heading">Plan your trip</h2>
+                    <input type="text" class="form__input input__from" name="from" placeholder="leaving from..."
+                        autocomplete="off" required>
+                    <input type="text" class="form__input input__to" name="to" placeholder="going to..."
+                        autocomplete="off" required>
+                    <label class="date__label" for="date">departing on...</label>
+                    <input type="date" class="form__input input__date" name="date" required>
+                    <input type="submit" class="input__submit" name="submit" value="Submit">
+                </form>
+            </div>
+        </section>
+
+        <!-- Section Result -->
+
+        <section id="result" class="section section__result invisible">
+            <div class="container results">
+                <div class="result__image">
+                    <img src="../images/planet-earth.png" alt="destination image" id="fromPixabay">
+                </div>
+                <div class="result__content">
+
+                    <i class="city__icon icon__result fas fa-map-pin"></i>
+                    <h2 class="city__name text__result">You are going to: <span id="city"></span></h2>
+                    <i class="date__icon icon__result fas fa-calendar-day"></i>
+                    <h2 class="date__name text__result">Departing on: <span id="date">DD/MM/YYYY</span></h2>
+
+                    <i class="days__icon icon__result fas fa-suitcase-rolling"></i>
+                    <h2 class="days__name text__result">This is <span id="days"> NUM </span> days away</h2>
+
+                    <i class="weather__icon icon__result fas fa-cloud-sun-rain"></i>
+                    <h2 class="weather__name text__result">Typical weather for then: High <span
+                            id="temp-high">100</span> &#176;C, Low <span id="temp-low">0</span> &#176;C
+                        <span id="summary"></span>.</h2>
+
+                    <a class="button button__save" id="save" href="#">Print</a>
+                    <a class="button button__delete" id="delete" href="#">Delete</a>
+
+                </div>
+            </div>
         </section>
     </main>
 
@@ -63,7 +109,7 @@
         <p>Powered by <a href="https://www.meaningcloud.com/developer/sentiment-analysis/doc">Meaning Cloud Sentiment
                 Analysis API</a></p>
     </footer>
-    <script>
+    <!-- <script>
         // Check that service workers are supported
         if ('serviceWorker' in navigator) {
             // Use the window load event to keep the page load performant
@@ -71,7 +117,7 @@
                 navigator.serviceWorker.register('/service-worker.js');
             });
         }
-    </script>
+    </script> -->
 </body>
 
 </html>
