feat: Forecast vs Historical API data

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -90,8 +90,8 @@
                     <h2 class="days__name text__result">This is <span id="days"> NUM </span> days away</h2>
 
                     <i class="weather__icon icon__result fas fa-cloud-sun-rain"></i>
-                    <h2 class="weather__name text__result">Typical weather for then: High <span
-                            id="temp-high">100</span> &#176;C, Low <span id="temp-low">0</span> &#176;C
+                    <h2 class="weather__name text__result"><span id="weather-text"></span>: High
+                        <span id="temp-high">100</span> &#176;C, Low <span id="temp-low">0</span> &#176;C
                         <span id="summary"></span>.</h2>
 
                     <a class="button button__save" id="save" href="#">Print</a>
