--- a/src/client/styles/base.scss
+++ b/src/client/styles/base.scss
@@ -1,64 +1,79 @@
 @import url('https://fonts.googleapis.com/css2?family=Patua+One&family=Roboto&display=swap');
+@import url('https://use.fontawesome.com/releases/v5.14.0/css/all.css');
 
-body {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    min-width: 320px;
-    background-color: lightblue;
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-    color: #ffffff;
-    border-bottom: 1px solid #F2441D;
+// Colors
+
+$primary-color: #9D8189; 
+$secondary-color: #D8E2DC;
+$tertiary-color: #FFE5D9;
+$quaternary-color: #FFCAD4;
+$quinary-color: #F4ACB7;
+$color-black: #000;
+$color-dark: #2f3d49;
+$color-light: #fff;
+
+// Typography
+
+$font-headings: 'Patua One', serif;
+$font-text: 'Roboto', sans-serif;
+$font-h1: 4rem;
+$font-h2: 3rem;
+$font-h3: 2rem;
+$text: 1rem;
+$text-lg: 1.2rem;
+$text-sm: 0.8rem;
+
+// Media queries
+$phone: 640px;
+$tablet: 768px;
+$desktop: 1024px;
+
+h1 {
+    font-family: $font-headings;
+    font-size: $font-h1;
+    margin-bottom: 1rem;
 }
-
-main {
-    flex: 2;
+h2 {
+    font-family: $font-headings;
+    font-size: $font-h2;
+    margin-bottom: 0.75rem;
+}
+h3 {
+    font-family: $font-headings;
+    font-size: $font-h3;
+    margin-bottom: 0.5rem;
+}
+h4 {
+    font-family: $font-text;
+    font-size: $text;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    margin-bottom: 0.5rem;
+}
+p {
+    font-family: $font-text;
+    font-size: $text;
+    line-height: 1.6;
 }
 
 a {
-    color: #ffffff;
+    color: $primary-color;
     &:hover,
     &:active
     {
-        color:#30DFF2;
+        color:darken($primary-color, 20%);
     }
 }
 
-p {
-    margin-bottom: 0.25rem;
-}
 
-section {
-    max-width: 800px;
-    margin: 50px auto;
-}
-h1 {
-    font-family: 'Patua One', cursive;
-    font-size: 3rem;
-    text-align: center;
-}
-h2 {
-    font-size: 1.25rem;
-    font-weight: 300;
-    margin: 0 0 1rem;
-}
-.input {
-    background-color: #F2441D;
-}
-.results {
-    width: 100%;
-    max-width: 800px;
-    background-color: darkslategrey;
-    min-height: 200px;
-    padding: 1.5rem;
-}
-
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: $phone) {
     h1 {
-        font-size: 2rem;
-    }
-    section {
-        margin: 20px auto;
+        font-size: $font-h2;
+    } 
+    h2 {
+        font-size: $font-h3;
+    }  
+    p {
+        font-size: $text-sm;
     }
 }
