feat: Logo, Favicon, screenshot, social tags

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -8,14 +8,14 @@
     <meta name="twitter:site" content="@irinakramer" />
     <meta name="twitter:title" content="Travel App" />
     <meta name="twitter:description"
-        content="Check an article for sentiment such as positivity, subjectivity and irony. Powered by MeaningCloud API." />
-    <meta name="twitter:image" content="https://evaluate-news-nlp-17.netlify.app/evaluate-news-screenshot.png" />
+        content="Plan your trip: enter city and dates, see destination photo and weather forecast." />
+    <meta name="twitter:image" content="https://travel-app-17.netlify.app/travel-app-screenshot.png" />
     <meta property="og:title" content="Evaluate News with NLP" />
     <meta property="og:description"
-        content="Check an article for sentiment such as positivity, subjectivity and irony. Powered by MeaningCloud API." />
+        content="Plan your trip: enter city and dates, see destination photo and weather forecast." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://evaluate-news-nlp-17.netlify.app/" />
-    <meta property="og:image" content="https://evaluate-news-nlp-17.netlify.app/evaluate-news-screenshot.png" />
+    <meta property="og:url" content="https://travel-app-17.netlify.app/" />
+    <meta property="og:image" content="https://travel-app-17.netlify.app/travel-app-screenshot.png" />
 </head>
 
 <body>
