refactor: Date format

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -40,9 +40,9 @@
         <section id="intro" class="section section__intro">
             <div class="container intro__wrapper">
                 <div class="intro__content">
-                    <h1 class="intro__heading">Travel Planner</h1>
-                    <h4 class="intro__title">Get your trip together</h4>
-                    <p class="intro__text">When you're ready to travel, use this simple resource to plan your trip, be
+                    <h1>Travel Planner</h1>
+                    <h4>Get your trip together</h4>
+                    <p>When you're ready to travel, use this simple resource to plan your trip, be
                         it overseas or domestic. You can enter your destination city and travel dates and will see a
                         beautiful photo and the weather forecast for your trip. Onwards!</p>
                     <a href="#" class="intro__link">+ add trip</a>
@@ -58,7 +58,7 @@
                     <img src="../images/travel-globe.png" alt="World Travel image">
                 </div>
                 <form class="form__content" id="form">
-                    <h2 class="form__heading">Plan your trip</h2>
+                    <h2>Plan your trip</h2>
                     <input type="text" class="form__input" name="from" placeholder="leaving from..." autocomplete="off"
                         required>
                     <input type="text" class="form__input" name="to" placeholder="going to..." autocomplete="off"
@@ -72,7 +72,7 @@
 
         <!-- Section Result -->
 
-        <section id="result" class="section section__result invisible">
+        <section id="result" class="section section__result hidden">
             <div class="container result">
                 <div class="result__image">
                     <img src="../images/travel-sights.jpg" alt="destination image" id="fromPixabay">
