chore: Service workers

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -100,7 +100,7 @@
         <p>Project by <a href="http://www.irinakramer.com" target="_blank">Irina Kramer</a></p>
         <p>Udacity Front End Web Developer nanodegree</p>
     </footer>
-    <!-- <script>
+    <script>
         // Check that service workers are supported
         if ('serviceWorker' in navigator) {
             // Use the window load event to keep the page load performant
@@ -108,7 +108,7 @@
                 navigator.serviceWorker.register('/service-worker.js');
             });
         }
-    </script> -->
+    </script>
 </body>
 
 </html>
