Feat: Added favicon

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -3,7 +3,9 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Travel App</title>
+    <title>Travel Planner App</title>
+    <meta name="description" content="Plan your trip: enter city and dates, then see destination photo and weather forecast.">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@irinakramer" />
     <meta name="twitter:title" content="Travel App" />
